--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name":"tsingsun/yii2-graphql",
+    "name":"tenderplus/yii2-graphql",
     "description":"facebook graphql server side for yii2 php framework",
     "keyword":["yii2","graphql"],    
     "type":"yii2-extension",
     "license": "BSD-3-Clause",
     "authors":[
         {
-            "name":"QingShan li",
-            "email":"21997272@qq.com"
+            "name":"tenderplus",
+            "email":"dev@tenderplus.kz"
         }
     ],
     "minimum-stability":"dev",
     "require":{
-        "php": ">=5.6.0",
+        "php": ">=7.2",
         "yiisoft/yii2":"~2.0.10",
-        "webonyx/graphql-php": "^0.13.0",
-        "ecodev/graphql-upload": "^4.0.0",
-        "zendframework/zend-diactoros": "^2.1"
+        "webonyx/graphql-php": "^15.9.0",
+        "ecodev/graphql-upload": "^7.0.0",
+        "zendframework/zend-diactoros": "^2.2"
     },
     "require-dev":{
         "phpunit/phpunit": "4.8.*"
