--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,21 @@
     "require-dev":{
         "phpunit/phpunit": "4.8.*"
     },
+    "config": {
+        "process-timeout": 1800,
+        "fxp-asset": {
+          "enabled": false
+        },
+        "allow-plugins": {
+          "yiisoft/yii2-composer": true
+        }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "autoload":{
         "psr-4":{
             "yii\\graphql\\":"src"
